[gd_scene load_steps=11 format=2]

[ext_resource path="res://_Misc/Fonts/Marker Felt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/scr_pause_menu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/scr_confirm_restart.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/ConfirmationBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://_Misc/Fonts/marker_felt.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/scr_confirm_to_menu.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.105882, 0.105882, 0.705882 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="menu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.013
margin_bottom = 0.200012
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_buttons" type="VBoxContainer" parent="menu"]
anchor_left = 0.031
anchor_right = 0.187
anchor_bottom = 1.0
margin_left = 32.256
margin_right = 0.511993
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_resume" type="Button" parent="menu/list_buttons"]
margin_top = 226.0
margin_right = 128.0
margin_bottom = 268.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.796078, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Resume"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_restart" type="Button" parent="menu/list_buttons"]
margin_top = 283.0
margin_right = 128.0
margin_bottom = 325.0
focus_mode = 0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.796078, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Restart"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmation" parent="menu/list_buttons/btn_restart" instance=ExtResource( 4 )]
script = ExtResource( 3 )
Description = "Are you sure you want to restart?"
Confirm_Text = "Yes"
Cancel_Text = "No"

[node name="btn_quit" type="Button" parent="menu/list_buttons"]
margin_top = 340.0
margin_right = 128.0
margin_bottom = 382.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.796078, 0, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmation" parent="menu/list_buttons/btn_quit" instance=ExtResource( 4 )]
script = ExtResource( 6 )
Description = "Are you sure you want to quit?"
Confirm_Text = "Yes"
Cancel_Text = "No"

[node name="audio_sfx" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
